# IELTS

./: .gitignore  package.json  pnpm-lock.yaml
.github/workflows/: windows-desktop-package.yml
apps/server/: package.json  tsconfig.json
apps/server/src/: main.ts  server.ts
apps/server/src/config/: paths.ts  runtimePaths.ts  runtimeServerOptions.ts
apps/server/src/db/: attemptRepo.ts  database.ts  frequencyRepo.ts  intensiveRepo.ts  migrate.ts  questionRepo.ts  seed.ts  syncRepo.ts
apps/server/src/importers/: frequencyImporter.ts  importUtils.ts  listeningZipImporter.ts  (+1 more)
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: main.tsx
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
docs/superpowers/: windows-packaged-runtime-verification.md
docs/superpowers/plans/: 2026-05-31-ielts-v1-local-app.md  2026-05-31-雅思-v1-本地程序执行文档.md
docs/superpowers/summaries/: phase-0-bootstrap.md  phase-1-local-database.md  phase-10-v1-hardening.md  phase-2-question-bank-import.md  phase-3-practice-engine.md  phase-4-exam-simulation-ui.md  phase-5-random-test-builder.md  phase-6-intensive-study.md  phase-7-history-analytics-reports.md  phase-8-baidu-sync-backup.md  phase-9-packaging-cross-platform-progress.md
scripts/: desktop-check.mjs  mac-readiness-check.mjs  v1-readiness-check.mjs  validate-windows-runtime-report.mjs  windows-packaged-runtime-check.ps1  windows-verification-handoff.mjs
(+71 files in other folders)
